--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ allprojects {
         //Others
         implementation 'com.google.guava:guava:30.1-jre'
         implementation 'org.reflections:reflections:0.9.12'
+        compileOnly 'org.projectlombok:lombok:1.18.16'
+        annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
         implementation 'io.jsonwebtoken:jjwt:0.9.1'
         runtime 'mysql:mysql-connector-java:8.0.22'
@@ -53,6 +55,8 @@ allprojects {
         testImplementation 'org.mockito:mockito-core:3.7.0'
         testImplementation 'com.github.javafaker:javafaker:1.0.2'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+        testCompileOnly 'org.projectlombok:lombok:1.18.16'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
     }
 
     test {
