--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,12 @@ allprojects {
         implementation 'org.springframework:spring-context-support:5.3.4'
         implementation 'org.springframework.boot:spring-boot-starter-amqp'
         implementation 'org.springframework.boot:spring-boot-starter-mail'
-        implementation 'org.springframework.boot:spring-boot-starter-security'
 
         //Others
         implementation 'com.google.guava:guava:30.1-jre'
         implementation 'org.reflections:reflections:0.9.12'
-        compileOnly 'org.projectlombok:lombok:1.18.16'
-        annotationProcessor 'org.projectlombok:lombok:1.18.16'
+        implementation 'org.mindrot:jbcrypt:0.4'
+
 
         implementation 'io.jsonwebtoken:jjwt:0.9.1'
         runtime 'mysql:mysql-connector-java:8.0.22'
@@ -54,8 +53,6 @@ allprojects {
         testImplementation 'org.mockito:mockito-core:3.7.0'
         testImplementation 'com.github.javafaker:javafaker:1.0.2'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-        testCompileOnly 'org.projectlombok:lombok:1.18.16'
-        testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
     }
 
     test {
