--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ allprojects {
 
         //Others
         implementation 'com.google.guava:guava:30.1-jre'
+        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
         implementation 'org.reflections:reflections:0.9.12'
         implementation 'org.mindrot:jbcrypt:0.4'
 
