--- a/build.gradle
+++ b/build.gradle
@@ -155,7 +155,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     implementation project(":accounts")
-    implementation project(":accounts")
+    implementation project(":retentions")
     implementation project(":shared")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
