--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,20 @@
 name: CI
 
-on: [ push ]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Start all the environment
-        run: docker-compose up -d
+        run: make build
 
-      - name: Wait for the environment to get up
-        run: |
-          while ! make ping-mysql &>/dev/null; do
-              echo "Waiting for database connection..."
-              sleep 2
-          done
       - name: Run the tests
         run: make test
