--- a/apps/main/resources/.env.local
+++ b/apps/main/resources/.env.local
@@ -10,6 +10,8 @@ ACCOUNTS_DATABASE_PASSWORD=lechuga
 
 #             COMMON             #
 #--------------------------------#
+JWT_KEY=0o0o01234
+
 #Spring Email
 MAIL_SENDER_HOST=smtp.gmail.com
 MAIL_SENDER_PORT=587
