--- a/apps/main/resources/.env
+++ b/apps/main/resources/.env
@@ -2,7 +2,7 @@
 #--------------------------------#
 ACCOUNTS_BACKEND_SERVER_PORT=8081
 # MySql
-ACCOUNTS_DATABASE_HOST=java_ddd_template-mysql
+ACCOUNTS_DATABASE_HOST=mysql
 ACCOUNTS_DATABASE_PORT=3306
 ACCOUNTS_DATABASE_NAME=accounts
 ACCOUNTS_DATABASE_USER=root
@@ -18,13 +18,13 @@ MAIL_SENDER_EMAIL=
 MAIL_SENDER_PASSWORD=
 
 #MySQL Events
-EVENTS_DATABASE_HOST=java_ddd_template-mysql
+EVENTS_DATABASE_HOST=mysql
 EVENTS_DATABASE_PORT=3306
 DOMAIN_EVENTS_DATABASE_NAME=domain_events
 DOMAIN_EVENTS_DATABASE_USER=root
 DOMAIN_EVENTS_DATABASE_PASSWORD=lechuga
 # RabbitMQ
-RABBITMQ_HOST=java_ddd_template-rabbitmq
+RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_LOGIN=admin
 RABBITMQ_PASSWORD=lechuga
